login section added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
         <h1 class="text-5xl text-center mt-6">Welcome to your 
             <span class="font-bold text-violet-600">Baap Er Bank!!!</span></h1>
     </header>
+    <!-- login section -->
+    <section class="bg-blue-100 w-9/12 mx-auto mt-12 p-8">
+        <h1 class="text-3xl mb-4 font-medium">Please Login</h1>
+        <div>
+            <input class="w-9/12 mb-4 px-3 block" type="email" name="" id="" placeholder="your email">
+            
+            <input class="w-9/12 mb-4 px-3 block" type="password" name="" id="" placeholder="password">
+            <button class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700">Submit</button>
+        </div>
+    </section>
 </body>
 </html>
