addEvent listener on the btn-submit

--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
     <section class="bg-blue-100 w-9/12 mx-auto mt-12 p-8">
         <h1 class="text-3xl mb-4 font-medium">Please Login</h1>
         <div>
-            <input class="w-9/12 mb-4 px-3 block" type="email" name="" id="" placeholder="your email">
+            <input class="w-9/12 mb-4 px-3 block" type="email" name="" id="user-email" placeholder="your email">
             
-            <input class="w-9/12 mb-4 px-3 block" type="password" name="" id="" placeholder="password">
-            <button class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700">Submit</button>
+            <input class="w-9/12 mb-4 px-3 block" type="password" name="" id="user-password" placeholder="password">
+            <button id="btn-submit" class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700">Submit</button>
         </div>
     </section>
+
+
+    <!-- JS -->
+    <script src="js/login.js"></script>
 </body>
 </html>
