done deposite and withdrraw

--- a/bank.html
+++ b/bank.html
@@ -25,11 +25,11 @@
                 </div>
                 <div class="bg-yellow-500 p-8 rounded-xl">
                     <h2 class="text-2xl">Withdraw</h2>
-                    <h1 class="text-5xl">$00</h1>
+                    <h1 class="text-5xl">$<span id="withdraw-id">00</span></h1>
                 </div>
                 <div class="bg-violet-500 p-8 rounded-xl">
                     <h2 class="text-2xl">Balance</h2>
-                    <h1 class="text-5xl">$1240</h1>
+                    <h1 class="text-5xl">$<span id="balance-id">1240</span></h1>
                 </div>
             </div>
         </section>
@@ -47,7 +47,7 @@
                     <h2 class="text-2xl mb-4">Please Withdraw</h2>
                     <input class="w-9/12 mb-4 px-3 block" type="text" name="" id="user-withdraw"
                         placeholder="$ Amount you want to Withdraw">
-                    <button id="btn-withdrwa"
+                    <button id="btn-withdraw"
                         class="bg-amber-600 px-8 py-2 text-white font-medium rounded-lg hover:bg-sky-700 text-2xl">Withdraw</button>
                 </div>
                 
@@ -55,6 +55,7 @@
         </section>
     </main>
     <script src="js/deposite.js"></script>
+    <script src="js/withdraw.js"></script>
 </body>
 
 </html>
